Fix styling and alignment

--- a/src/components/Progress/Progress.css
+++ b/src/components/Progress/Progress.css
@@ -1,11 +1,11 @@
 .Progress {
   display: flex;
-  height: 1vh;
+  height: 100%;
   width: 100%;
 }
 
 .Progress-fill {
   background: #eee;
-  border-radius: 0 0.5vh 0.5vh 0;
-  transition: width 0.2s ease-in;
+  border-radius: 0 100vw 100vw 0;
+  transition: width 1s linear;
 }
