--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -12,12 +12,17 @@
   flex-grow: 1;
   font-family: "Space Mono", monospace;
   font-size: 28vw;
+  overflow: hidden;
 }
 
 .Timer-clock-colon {
   margin: 0 -2vw;
 }
 
-.Timer-progress {
+.Timer-progressWrapper {
+  flex-grow: 0;
+  flex-shrink: 0;
+  height: 2vw;
+  min-height: 12px;
   width: 100vw;
 }
